--- a/index.html
+++ b/index.html
@@ -74,10 +74,12 @@
     <section class="page-section" id="contact">
       <h5>Contact Me</h5>
       <p>111.111.1111</p>
-      <p>111111@gmail.com</p>
-      <p>GitHub</p>
-      <p>Twitter</p>
-      <p>Spotfiy</p>
+      <p><a href="http://www.google.co.uk/">111@gmail.com</a></p>
+      <p><a href="https://github.com/search?q=fitzfinoo>">GitHub</a></p>
+      <p><a href="https://twitter.com/?lang=en">Twitter</a></p>
+      <p><a
+          href="https://www.spotify.com/uk/premium/?utm_source=uk-en_brand_contextual-desktop_text&utm_medium=paidsearch&utm_campaign=alwayson_eu_uk_performancemarketing_core_brand+contextual-desktop+text+exact+uk-en+google&gclid=EAIaIQobChMIi83JpOGB_AIV1uvtCh1FCwraEAAYAiAAEgLBXfD_BwE&gclsrc=aw.ds">Spotfiy</a>
+      </p>
 
 
 
