--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-gb">
 
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Fiona Lai // Web Developer</title>
   <link rel="stylesheet" href="./css/style.css" />
+
 </head>
 
 <body>
@@ -14,14 +16,17 @@
 
   <div class="nav">
     <div class="left">
+      <img src="images/WIN_20230105_15_01_53_Pro.jpg" class="headshot">
       <h1>Fiona Lai</h1>
     </div>
 
     <div class="right">
-      <a href="#AboutMe">About Me</a>
+      <ul class="list">
+      <li><a href="#AboutMe">About Me</a>
       <a href="#Work">Work</a>
       <a href="#ContactMe">Contact Me</a>
-      <a href="#">Resume</a>
+      <a href="#Resume">Resume</a>
+      <li></ul>
     </div>
 
   </div>
